modify gitigore file

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,2 @@
-hardhat-tutorial/artifacts/build-info/61b8d86e569e4b80bab883ca3679073d.json
-hardhat-tutorial/artifacts/contracts/Token.sol/Token.dbg.json
-hardhat-tutorial/artifacts/contracts/Token.sol/Token.json
+hardhat-tutorial/artifacts/
+hardhat-tutorial/cache/
